# webreel

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  demo.yml
docs/: ai-integration.md  feedback-schema.md
docs/scenarios/: form.yml  spa.yml  tabs.yml
scripts/: gen_feedback_schema.py  generate_demo.py
src/clickcast/: __init__.py  __main__.py  cli.py  reel.py
src/clickcast/annotate/: __init__.py
src/clickcast/config/: __init__.py  config.py
src/clickcast/core/: actions.py  session.py
src/clickcast/discover/: __init__.py
src/clickcast/discovery/: __init__.py  discovery.py  urlutil.py
src/clickcast/encode/: encoder.py
src/clickcast/feedback/: __init__.py  builder.py  collector.py  models.py
src/clickcast/feedback/schema/: v1.json
src/clickcast/scenario/: scenario.py
src/webreel/: __init__.py  __main__.py  cli.py
src/webreel/capture/: __init__.py
src/webreel/config/: __init__.py
src/webreel/core/: actions.py  session.py
src/webreel/discover/: __init__.py
src/webreel/encode/: __init__.py
src/webreel/scenario/: __init__.py
tests/: conftest.py  test_actions.py  test_cli.py  test_cli_auto_bfs.py  test_cli_auto_progress.py  test_collector.py  test_config.py  test_discover.py  test_discovery.py  test_docs_scenarios.py  test_encoder.py  test_feedback.py  test_fixture_site.py  test_reel.py  test_session.py  test_smoke.py  test_urlutil.py
tests/consumer/: read_sidecar.py
tests/fixtures/site/: form.html  index.html  privacy.html  tabs.html  terms.html
